Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
 
 <p>Note : This repo is to be used for Summer 2015 Big Data Course only. </p>
 
+<p>Update Log :</p>
+
+<p>Lab1 : MongoDB material
+Lab2 : Hadoop new and old API code files.
+Lab3 : HBASE using Java API</p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/brahmbhattspandan/BigDataSummer2015">Big data Summer 2015</a> is maintained by <a href="https://github.com/brahmbhattspandan">brahmbhattspandan</a>.</span>
 
