Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
 
 <p>Update Log :</p>
 
-<p>Lab1 : MongoDB material
-Lab2 : Hadoop new and old API code files.
-Lab3 : HBASE using Java API</p>
+<ul>
+<li>Lab1 : MongoDB material</li>
+<li>Lab2 : Hadoop new and old API code files.</li>
+<li>Lab3 : HBASE using Java API</li>
+</ul>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/brahmbhattspandan/BigDataSummer2015">Big data Summer 2015</a> is maintained by <a href="https://github.com/brahmbhattspandan">brahmbhattspandan</a>.</span>
